# OrchidHomeAssignment

./: .env.example  .gitignore  README.md  api.py  pyproject.toml  run_app.py
chat/: __init__.py  agent.py  request_policy.py  tools.py
data_preparation/: __init__.py  call_graph.py  download_repo.py  graph_storage.py  index_data.py  symbol_embeddings.py  symbol_parser.py
streamlit_gui/: api_client.py  app.py  config.py  models.py  state.py
tests/: test_api.py  test_symbol_embeddings.py
