[project]
name = "orchidhomeassignment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.41.0",
    "chromadb>=0.5",
    "fastapi>=0.115",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",
    "networkx>=3.2",
    "openai>=1.0",
    "pytest>=8.0",
    "requests>=2.32",
    "streamlit>=1.40",
    "tree-sitter>=0.22",
    "tree-sitter-java>=0.21",
    "tree-sitter-python>=0.21",
    "uvicorn>=0.30",
    "azure-identity",
    "langchain-classic>=1.0.7",
    "langchain-core>=1.4.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
